# testingQCustomGraphs

./: CMakeLists.txt
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
gui/DeviceXplore/: ListView.h
gui/dataModels/: PlotData.cpp  PlotData.h  PlotSettings.cpp  PlotSettings.h
gui/reusableComponents/: ListView.cpp  PlottingWidget.cpp  PlottingWidget.h  chart.cpp  chart.h  flowlayout.cpp  flowlayout.h  qcustomplot.cpp
test/: CMakeLists.txt
